# config/routes.rb
@@ -10,6 +10,7 @@ Rails.application.routes.draw do
     namespace :v1 do
       resources :users, only: [ :create ]
       resources :sessions, only: [ :create ]
+      resource :timeline, only: :show
       resources :posts, only: %i[index show create update destroy] do
         resource :rating, only: :update
       end
